# papers-qa

./: .gitignore  README.md  pdf_index.faiss  pyproject.toml
papers_qa/: chunking.py  cli.py  config.py  embeddings.py  faiss_store.py  metadata.jsonl  ollama_client.py  prompt.py
